tests/ui/non_inline_module.stderr
error[E0658]: non-inline modules in proc macro input are unstable
 --> tests/ui/non_inline_module.rs:2:1
  |
2 | mod foo;
  | ^^^^^^^^
  |
  = note: see issue #54727 <https://github.com/rust-lang/rust/issues/54727> for more information
  = help: add `#![feature(proc_macro_hygiene)]` to the crate attributes to enable

error: #[langs] must be applied to inline module
 --> tests/ui/non_inline_module.rs:2:1
  |
2 | mod foo;
  | ^^^^^^^^
