tests/ui/non_inline_module.rs
#[nanopass::langs]
mod foo;

fn main() {}
